--- a/conda.yml
+++ b/conda.yml
@@ -169,7 +169,7 @@ dependencies:
       - pysocks==1.7.1
       - pytesseract==0.3.10
       - python-dateutil==2.8.2
-      - python-graphviz==0.20.1
+      - graphviz==0.20.1
       - pytorch-lightning==1.9.5
       - pytorch-metric-learning==1.7.3
       - pytz==2023.3
