--- a/conda_origin.yml
+++ b/conda_origin.yml
@@ -282,7 +282,7 @@ dependencies:
       - pytest-mypy==0.10.3
       - pytest-timeout==2.1.0
       - python-dateutil==2.8.2
-      - python-graphviz==0.20.1
+      - graphviz==0.20.1
       - python-json-logger==2.0.7
       - pytorch-lightning==1.9.5
       - pytorch-metric-learning==1.7.3
